airs\refac(front): #3612 link to rules
- Added link to rules on each compliance image


Former-commit-id: 3faff8cfb2d20561074528458e38e66b506a917f

--- a/airs/theme/2020/templates/contact-us.html
+++ b/airs/theme/2020/templates/contact-us.html
@@ -85,21 +85,21 @@
       focused on cybersecurity, offering ethical hacking and pentesting services
       to companies in the banking, financial, technology, healthcare, insurance,
       manufacturing, and airline industries, among others.
-      Fluid Attacks' team helps its clients to manage their cybersecurity risks
+      Fluid Attacks" team helps its clients to manage their cybersecurity risks
       and certify that their systems, which are critical to their operations,
       are safe for their users.
     </p>
   </div>
   <div class="w-50-l w-100">
     <div class="contact-form w-100">
-      <div id='crmWebToEntityForm' class='zcwf_lblLeft crmWebToEntityForm'>
-        <script src='https://www.google.com/recaptcha/api.js' async defer></script>
-        <form action='https://crm.zoho.com/crm/WebForm' name=WebForm4687720000000504044 method='POST' onSubmit='javascript:document.charset="UTF-8"; return checkMandatory4687720000000504044(); return validateForm()' accept-charset='UTF-8'>
-          <input type='text' style='display:none;' name='xnQsjsdp' value='1a8b1be45eb673e71a5b1925197e4664b5207c89778ad1e7315be647827aaa2d' />
-          <input type='hidden' name='zc_gad' id='zc_gad' value='' />
-          <input type='text' style='display:none;' name='xmIwtLD' value='78c3d7dacbbcd07154bafdf9da487877e22d1c6218228967e11c43d493492210' />
-          <input type='text'  style='display:none;' name='actionType' value='Q3VzdG9tTW9kdWxlMQ==' />
-          <input type='text' style='display:none;' name='returnURL' value='https://fluidattacks.com/contact-us/thank-you/' />
+      <div id="crmWebToEntityForm" class="zcwf_lblLeft crmWebToEntityForm">
+        <script src="https://www.google.com/recaptcha/api.js" async defer></script>
+        <form action="https://crm.zoho.com/crm/WebForm" name=WebForm4687720000000504044 method="POST" onSubmit="javascript:document.charset="UTF-8"; return checkMandatory4687720000000504044(); return validateForm()" accept-charset="UTF-8">
+          <input type="text" style="display:none;" name="xnQsjsdp" value="1a8b1be45eb673e71a5b1925197e4664b5207c89778ad1e7315be647827aaa2d" />
+          <input type="hidden" name="zc_gad" id="zc_gad" value="" />
+          <input type="text" style="display:none;" name="xmIwtLD" value="78c3d7dacbbcd07154bafdf9da487877e22d1c6218228967e11c43d493492210" />
+          <input type="text"  style="display:none;" name="actionType" value="Q3VzdG9tTW9kdWxlMQ==" />
+          <input type="text" style="display:none;" name="returnURL" value="https://fluidattacks.com/contact-us/thank-you/" />
 
         <div class="w-50-l pv3 center">
           <input type="text"
@@ -109,7 +109,7 @@
                 maxlength="120"
                 placeholder="Full Name" />
         </div>
-        <div class='w-50-l pv3 center'>
+        <div class="w-50-l pv3 center">
           <input type="text"
                 ftype="email"
                 id="Email"
@@ -119,15 +119,15 @@
                 placeholder="Email" />
         </div>
         <div class="w-50-l pv3 center">
-          <input id='COBJ1CF6'
-                name='COBJ1CF6'
-                maxlength='255'
+          <input id="COBJ1CF6"
+                name="COBJ1CF6"
+                maxlength="255"
                 type="hidden"
                 value=""/>
           <label for="COBJ1CF2"
               class="db">
           </label>
-          <input  id='COBJ1CF2'
+          <input  id="COBJ1CF2"
                   maxlength="30"
                   name="COBJ1CF2"
                   type="text"
@@ -173,10 +173,10 @@
             <option value="Undetermined">
               Undetermined
             </option>
-            <option value='One-Shot&#x20;Hacking'>
+            <option value="One-Shot&#x20;Hacking">
               One-Shot Hacking
             </option>
-            <option value='Continuous&#x20;Hacking'>
+            <option value="Continuous&#x20;Hacking">
               Continuous Hacking
             </option>
           </select>
@@ -191,63 +191,63 @@
                     class="w-100 h4 center"
                     placeholder="Message"></textarea>
         </div>
-        <div class='g-recaptcha ma-auto w6 center'
-            data-sitekey='6LdUZt8ZAAAAAIZuuUl4N3iIsL3FMevSSmuRSFmx'
-            data-theme='light'
-            data-callback='rccallback'
-            captcha-verified='false'
-            id='recap'>
+        <div class="g-recaptcha ma-auto w6 center"
+            data-sitekey="6LdUZt8ZAAAAAIZuuUl4N3iIsL3FMevSSmuRSFmx"
+            data-theme="light"
+            data-callback="rccallback"
+            captcha-verified="false"
+            id="recap">
         </div>
-        <div  id='recapErr' style='font-size:12px;color:red;visibility:hidden;'>
+        <div  id="recapErr" style="font-size:12px;color:red;visibility:hidden;">
         Captcha validation failed. If you are not a robot then please try again.
         </div>
-          <div class='tc'>
-            <input type='submit'
-                  id='formsubmit'
+          <div class="tc">
+            <input type="submit"
+                  id="formsubmit"
                   class="formsubmit bn br2 bannerbt hv-bt-fluid-rd pv3 w-100 bt-trans white b roboto pointer"
-                  value='Submit'
-                  title='Submit'>
+                  value="Submit"
+                  title="Submit">
           </div>
           <script>
-            var mndFileds=new Array('NAME','Email','COBJ1CF2','COBJ1CF5','COBJ1CF6');
-            var fldLangVal=new Array('Full name','Email','Mobile','How can we help you?','Country'); 
-            var name='';
-            var email='';
+            var mndFileds=new Array("NAME","Email","COBJ1CF2","COBJ1CF5","COBJ1CF6");
+            var fldLangVal=new Array("Full name","Email","Mobile","How can we help you?","Country"); 
+            var name="";
+            var email="";
         
           /* Do not remove this code. */
             function rccallback()
           {
-            if(document.getElementById('recap')!=undefined){
-              document.getElementById('recap').setAttribute('captcha-verified',true);
+            if(document.getElementById("recap")!=undefined){
+              document.getElementById("recap").setAttribute("captcha-verified",true);
             }
-            if(document.getElementById('recapErr')!=undefined && document.getElementById('recapErr').style.visibility == 'visible' ){
-              document.getElementById('recapErr').style.visibility='hidden';
+            if(document.getElementById("recapErr")!=undefined && document.getElementById("recapErr").style.visibility == "visible" ){
+              document.getElementById("recapErr").style.visibility="hidden";
             }
           }
           function reCaptchaAlert()
           {
-            var recap = document.getElementById('recap');
-            if( recap !=undefined && recap.getAttribute('captcha-verified') == 'false')
+            var recap = document.getElementById("recap");
+            if( recap !=undefined && recap.getAttribute("captcha-verified") == "false")
             {
-              document.getElementById('recapErr').style.visibility='visible';
+              document.getElementById("recapErr").style.visibility="visible";
               return false;
             }
             return true;
           }
           function validateEmail()
           {
-            var emailFld = document.querySelectorAll('[ftype=email]');
+            var emailFld = document.querySelectorAll("[ftype=email]");
             var i;
             for (i = 0; i < emailFld.length; i++)
             {
               var emailVal = emailFld[i].value;
-              if((emailVal.replace(/^\s+|\s+$/g, '')).length!=0 )
+              if((emailVal.replace(/^\s+|\s+$/g, "")).length!=0 )
               {
-                var atpos=emailVal.indexOf('@');
-                var dotpos=emailVal.lastIndexOf('.');
+                var atpos=emailVal.indexOf("@");
+                var dotpos=emailVal.lastIndexOf(".");
                 if (atpos<1 || dotpos<atpos+2 || dotpos+2>=emailVal.length)
                 {
-                  alert('Please enter a valid email address. ');
+                  alert("Please enter a valid email address. ");
                   emailFld[i].focus();
                   return false;
                 }
@@ -258,33 +258,33 @@
         
               function checkMandatory4687720000000504044() {
             for(i=0;i<mndFileds.length;i++) {
-              var fieldObj=document.forms['WebForm4687720000000504044'][mndFileds[i]];
+              var fieldObj=document.forms["WebForm4687720000000504044"][mndFileds[i]];
               if(fieldObj) {
-              if (((fieldObj.value).replace(/^\s+|\s+$/g, '')).length==0) {
-                if(fieldObj.type =='file')
+              if (((fieldObj.value).replace(/^\s+|\s+$/g, "")).length==0) {
+                if(fieldObj.type =="file")
                 { 
-                  alert('Please select a file to upload.'); 
+                  alert("Please select a file to upload."); 
                   fieldObj.focus(); 
                   return false;
                 } 
-              alert(fldLangVal[i] +' cannot be empty.'); 
+              alert(fldLangVal[i] +" cannot be empty."); 
                         fieldObj.focus();
                         return false;
-              }  else if(fieldObj.nodeName=='SELECT') {
-                        if(fieldObj.options[fieldObj.selectedIndex].value=='-None-') {
-                alert(fldLangVal[i] +' cannot be none.'); 
+              }  else if(fieldObj.nodeName=="SELECT") {
+                        if(fieldObj.options[fieldObj.selectedIndex].value=="-None-") {
+                alert(fldLangVal[i] +" cannot be none."); 
                 fieldObj.focus();
                 return false;
                   }
-              } else if(fieldObj.type =='checkbox'){
+              } else if(fieldObj.type =="checkbox"){
                   if(fieldObj.checked == false){
-                alert('Please accept  '+fldLangVal[i]);
+                alert("Please accept  "+fldLangVal[i]);
                 fieldObj.focus();
                 return false;
                   } 
                 } 
                 try {
-                    if(fieldObj.name == 'Last Name') {
+                    if(fieldObj.name == "Last Name") {
                 name = fieldObj.value;
                       }
               } catch (e) {}
@@ -293,24 +293,24 @@
             if(!validateEmail()){return false;}
             
             if(!reCaptchaAlert()){return false;}
-            document.querySelector('.crmWebToEntityForm .formsubmit').setAttribute('disabled', true);
+            document.querySelector(".crmWebToEntityForm .formsubmit").setAttribute("disabled", true);
           }
         
         function tooltipShow(el){
           var tooltip = el.nextElementSibling;
           var tooltipDisplay = tooltip.style.display;
-          if(tooltipDisplay == 'none'){
-            var allTooltip = document.getElementsByClassName('zcwf_tooltip_over');
+          if(tooltipDisplay == "none"){
+            var allTooltip = document.getElementsByClassName("zcwf_tooltip_over");
             for(i=0; i<allTooltip.length; i++){
-              allTooltip[i].style.display='none';
+              allTooltip[i].style.display="none";
             }
-            tooltip.style.display = 'block';
+            tooltip.style.display = "block";
           }else{
-            tooltip.style.display='none';
+            tooltip.style.display="none";
           }
         }
         </script>
-          <!-- Do not remove this --- Analytics Tracking code starts --><script id='wf_anal' src='https://crm.zohopublic.com/crm/WebFormAnalyticsServeServlet?rid=78c3d7dacbbcd07154bafdf9da487877e22d1c6218228967e11c43d493492210gid1a8b1be45eb673e71a5b1925197e4664b5207c89778ad1e7315be647827aaa2dgid0553f79ba9ccf83e1be97f6851b4205dc78530f131c55496a36cdc928fa214e9gid14f4ec16431e0686150daa43f3210513'></script><!-- Do not remove this --- Analytics Tracking code ends. -->
+          <!-- Do not remove this --- Analytics Tracking code starts --><script id="wf_anal" src="https://crm.zohopublic.com/crm/WebFormAnalyticsServeServlet?rid=78c3d7dacbbcd07154bafdf9da487877e22d1c6218228967e11c43d493492210gid1a8b1be45eb673e71a5b1925197e4664b5207c89778ad1e7315be647827aaa2dgid0553f79ba9ccf83e1be97f6851b4205dc78530f131c55496a36cdc928fa214e9gid14f4ec16431e0686150daa43f3210513"></script><!-- Do not remove this --- Analytics Tracking code ends. -->
       </div>
     </form>
   </div>
