--- a/airs/theme/2020/templates/landing.html
+++ b/airs/theme/2020/templates/landing.html
@@ -298,21 +298,31 @@
     <h2 class="white center roboto w-100 tc f1 lh3 pl3-l ph3 mw7">
       We can help you comply with the following standards, among others<br>
     </h2>
-    <img
-      src="{{ SITEURL }}/{{ THEME_STATIC_DIR }}/images/compliance/logo-owasp.png"
-      alt="Logo OWASP">
-    <img
-      src="{{ SITEURL }}/{{ THEME_STATIC_DIR }}/images/compliance/logo-pci-dss.png"
-      alt="Logo Pci DSS">
-    <img
-      src="{{ SITEURL }}/{{ THEME_STATIC_DIR }}/images/compliance/logo-hipaa.png"
-      alt="Logo HIPAA">
-    <img
-      src="{{ SITEURL }}/{{ THEME_STATIC_DIR }}/images/compliance/logo-nist.png"
-      alt="Logo NIST">
-    <img
-      src="{{ SITEURL }}/{{ THEME_STATIC_DIR }}/images/compliance/logo-gdpr.png"
-      alt="Logo GDPR">
+    <a href="{{ SITEURL }}/products/rules/" class="no-underline">
+      <img
+        src="{{ SITEURL }}/{{ THEME_STATIC_DIR }}/images/compliance/logo-nist.png"
+        alt="Logo NIST">
+    </a>
+    <a href="{{ SITEURL }}/products/rules/" class="no-underline">
+      <img
+        src="{{ SITEURL }}/{{ THEME_STATIC_DIR }}/images/compliance/logo-owasp.png"
+        alt="Logo OWASP">
+    </a>
+    <a href="{{ SITEURL }}/products/rules/" class="no-underline">
+      <img
+        src="{{ SITEURL }}/{{ THEME_STATIC_DIR }}/images/compliance/logo-pci-dss.png"
+        alt="Logo Pci DSS">
+    </a>
+    <a href="{{ SITEURL }}/products/rules/" class="no-underline">
+      <img
+        src="{{ SITEURL }}/{{ THEME_STATIC_DIR }}/images/compliance/logo-hipaa.png"
+        alt="Logo HIPAA">
+    </a>
+    <a href="{{ SITEURL }}/products/rules/" class="no-underline">
+      <img
+        src="{{ SITEURL }}/{{ THEME_STATIC_DIR }}/images/compliance/logo-gdpr.png"
+        alt="Logo GDPR">
+    </a>
   </div>
 </div>
 <!-- Ebook section -->
