airs\refac(front): #3611 solutions menu
- Added Solutions menu for the topbar


Former-commit-id: d81e0d54e0e3c823468ab5808957653866974052

--- a/airs/theme/2020/static/scss/base.scss
+++ b/airs/theme/2020/static/scss/base.scss
@@ -974,7 +974,7 @@ video {
   display: block;
 }
 
-.usecases-content, .products-content {
+.usecases-content, .products-content, .solutions-content {
   display: none;
   position: absolute;
   background-color: white;
@@ -998,6 +998,10 @@ video {
 }
 
 .products-index:hover .products-content {
+  display: block;
+}
+
+.solutions-index:hover .solutions-content {
   display: block;
 }
 
