--- a/airs/theme/2020/templates/menu.html
+++ b/airs/theme/2020/templates/menu.html
@@ -565,6 +565,22 @@
           <button class="outline-transparent fw4 ba b--white bw1 ph0 pv2 hv-fluid-rd bg-transparent pointer">Resources</button>
         </a>
       </li>
+      <li class="db-l dn fr mr3 pr2 pv4 solutions-index">
+        <a class="tc no-underline c-fluid-bk f-key-features menu-txt-trans roboto hv-fluid-rd nt-menu"
+            href="{{ SITEURL }}/services/continuous-hacking/">
+          <button class="outline-transparent fw4 ba b--white bw1 ph0 pv2 hv-fluid-rd bg-transparent pointer">
+            Solutions<div class="dib w1"><i class="fas fa-angle-down"></i></div>
+          </button>
+        </a>
+        <div class="solutions-content roboto br3 br--bottom pt4 fadein">
+          <a class="f-key-features fw4" href="{{ SITEURL }}/solutions/devsecops/">DevSecOps</a>
+          <a class="f-key-features fw4" href="{{ SITEURL }}/solutions/security-testing/">Security Testing</a>
+          <a class="f-key-features fw4" href="{{ SITEURL }}/solutions/pentesting/">Pentesting</a>
+          <a class="f-key-features fw4" href="{{ SITEURL }}/solutions/ethical-hacking/">Ethical Hacking</a>
+          <a class="f-key-features fw4" href="{{ SITEURL }}/solutions/red-teaming/">Red Teaming</a>
+          <a class="f-key-features fw4" href="{{ SITEURL }}/solutions/attack-simulation/">Attack Simulation</a>
+        </div>
+      </li>
       <li class="db-l dn fr mr3 pr2 pv4 usecases-index">
         <a class="tc no-underline c-fluid-bk f-key-features menu-txt-trans roboto hv-fluid-rd nt-menu"
             href="{{ SITEURL }}/services/continuous-hacking/">
