airs\refac(front): #3607 paragraph to one shot
- Added a paragraph to the One-Shot Hacking page


Former-commit-id: ff0a92f81371dd63b71eb973e3b5e9f70199e439

--- a/airs/theme/2020/templates/contact-us.html
+++ b/airs/theme/2020/templates/contact-us.html
@@ -94,7 +94,7 @@
     <div class="contact-form w-100">
       <div id="crmWebToEntityForm" class="zcwf_lblLeft crmWebToEntityForm">
         <script src="https://www.google.com/recaptcha/api.js" async defer></script>
-        <form action="https://crm.zoho.com/crm/WebForm" name=WebForm4687720000000504044 method="POST" onSubmit="javascript:document.charset="UTF-8"; return checkMandatory4687720000000504044(); return validateForm()" accept-charset="UTF-8">
+        <form action="https://crm.zoho.com/crm/WebForm" name=WebForm4687720000000504044 method="POST" onSubmit="javascript:document.charset='UTF-8'; return checkMandatory4687720000000504044(); return validateForm()" accept-charset="UTF-8">
           <input type="text" style="display:none;" name="xnQsjsdp" value="1a8b1be45eb673e71a5b1925197e4664b5207c89778ad1e7315be647827aaa2d" />
           <input type="hidden" name="zc_gad" id="zc_gad" value="" />
           <input type="text" style="display:none;" name="xmIwtLD" value="78c3d7dacbbcd07154bafdf9da487877e22d1c6218228967e11c43d493492210" />
