--- a/airs/theme/2020/templates/services/one-shot.html
+++ b/airs/theme/2020/templates/services/one-shot.html
@@ -117,5 +117,8 @@
       {{ page.content }}
     </div>
   </div>
+  <p class="c-fluid-bk fw7 f2 tc">
+    If you want to achieve higher vulnerability remediation rates, we recommend our Continuous Hacking service
+  </p>
 </div>
 {% endblock content %}
