airs\refac(front): #3624 clients to about us list
- Added Clients link to the About Us list in the menu and the footer


Former-commit-id: 4a49d5e39b9f8b96e35094e4ed84a079c4674fd7

--- a/airs/theme/2020/templates/footer.html
+++ b/airs/theme/2020/templates/footer.html
@@ -115,6 +115,10 @@
             About Us
           </a><br>
           <a class="c-fluid-gray roboto f5 fw2 no-underline hv-fluid-bk lh-copy"
+            href="{{ SITEURL }}/about-us/clients/">
+            Clients
+          </a><br>
+          <a class="c-fluid-gray roboto f5 fw2 no-underline hv-fluid-bk lh-copy"
             href="{{ SITEURL }}/about-us/certifications/">
             Certifications
           </a><br>
