--- a/airs/theme/2020/templates/menu.html
+++ b/airs/theme/2020/templates/menu.html
@@ -123,6 +123,11 @@
                         </a>
                       </li>
                       <li class="mv1">
+                        <a href="{{ SITEURL }}/about-us/clients/" class="menulink white roboto no-underline nowrap">
+                          Clients
+                        </a>
+                      </li>
+                      <li class="mv1">
                         <a href="{{ SITEURL }}/about-us/certifications/" class="menulink white roboto no-underline nowrap">
                           Certifications
                         </a>
@@ -389,6 +394,12 @@
                       </a>
                       <div class="aboutus-list pv2 dn">
                         <ul class="list pl3">
+                          <li class="pv2">
+                            <a class="hv-fluid-rd f5 c-fluid-bk fw4 no-underline menu-txt-trans roboto pv"
+                                href="{{ SITEURL }}/about-us/clients/">
+                                Clients
+                            </a>
+                          </li>
                           <li class="pv2">
                             <a class="hv-fluid-rd f5 c-fluid-bk fw4 no-underline menu-txt-trans roboto pv"
                                 href="{{ SITEURL }}/about-us/certifications/">
