airs\fix(front): #3641 fix contact buttons
- Added reset button and fix the sizeof the submit button


Former-commit-id: d28b072e57a69ce5d16097944dbcb1f9048fc2c1

--- a/airs/theme/2020/templates/contact-us.html
+++ b/airs/theme/2020/templates/contact-us.html
@@ -204,9 +204,14 @@
           <div class="tc">
             <input type="submit"
                   id="formsubmit"
-                  class="formsubmit bn br2 bannerbt hv-bt-fluid-rd pv3 w-100 bt-trans white b roboto pointer"
+                  class="formsubmit bn br2 bannerbt hv-bt-fluid-rd pv3 bt-pd bt-trans white b roboto pointer mh3"
                   value="Submit"
                   title="Submit">
+            <input type="reset"
+                   class="br2 button-white pv3 bt-pd bt-trans c-fluid-bk b roboto pointer outline-transparent mh3"
+                   name="reset"
+                   value="Reset"
+                   title="Reset">
           </div>
           <script>
             var mndFileds=new Array("NAME","Email","COBJ1CF2","COBJ1CF5","COBJ1CF6");
