--- a/airs/theme/2020/templates/products/forces.html
+++ b/airs/theme/2020/templates/products/forces.html
@@ -288,6 +288,10 @@
       </button>
     </a>
   </div>
+  <p class="c-fluid-bk fw7 f2 tc">
+    Forces is part of our Continuous Hacking service,
+    which will enable you to achieve high vulnerability remediation rates
+  </p>
 </div>
 {% endblock content %}
 
