airs\refac(front): #3639 add link to each product
- Added a link to each product on the titles at the Home page


Former-commit-id: d4f513baa34f8656016160d18ec2ea37eee37103

--- a/airs/theme/2020/templates/landing.html
+++ b/airs/theme/2020/templates/landing.html
@@ -126,9 +126,11 @@
             </i>
             integrates
           </h2>
-          <h3 class="c-fluid-bk roboto fw7 f4 mv0 tl-l tc lh-18">
-            The Platform Element that Controls the Process to Achieve Remediation
-          </h3>
+          <a href="{{ SITEURL }}/products/integrates/" class="c-fluid-bk no-underline">
+            <h3 class="c-fluid-bk roboto fw7 f4 mv0 tl-l tc lh-18">
+              The Platform Element that Controls the Process to Achieve Remediation
+            </h3>
+          </a>
           <p class="c-fluid-bk roboto fw1 f-key-features lh-2 tl">
             <strong class="b">Integrates</strong> is a platform where vulnerabilities
             are reported, classified and prioritized.
@@ -160,9 +162,11 @@
             </i>
             skims
           </h2>
-          <h3 class="c-fluid-bk roboto fw7 f4 mv0 tr-l tc lh-18">
-            The Automatic Element that Identifies Superficial Vulnerabilities
-          </h3>
+          <a href="{{ SITEURL }}/products/skims/" class="c-fluid-bk no-underline">
+            <h3 class="c-fluid-bk roboto fw7 f4 mv0 tr-l tc lh-18">
+              The Automatic Element that Identifies Superficial Vulnerabilities
+            </h3>
+          </a>
           <p class="c-fluid-bk roboto fw1 f-key-features lh-2 tr-l tl">
             <strong class="b">Skims</strong> is a SAST/SCA tool that searches and
             detects superficial or peripheral vulnerabilities in your IT systems
@@ -193,9 +197,11 @@
             </i>
             drills
           </h2>
-          <h3 class="c-fluid-bk roboto fw7 f4 mv0 tl-l tc lh-18">
-            The Human Element that Continuously Detects Vulnerabilities
-          </h3>
+          <a href="{{ SITEURL }}/products/drills/" class="c-fluid-bk no-underline">
+            <h3 class="c-fluid-bk roboto fw7 f4 mv0 tl-l tc lh-18">
+              The Human Element that Continuously Detects Vulnerabilities
+            </h3>
+          </a>
           <p class="c-fluid-bk roboto fw1 f-key-features lh-2 tl">
             <strong class="b">Drills</strong> uses the right combination
             of technology and human intelligence
@@ -227,9 +233,11 @@
             </i>
             forces
           </h2>
-          <h3 class="c-fluid-bk roboto fw7 f4 mv0 tr-l tc lh-18">
-            The Robot Element that Breaks the Build to Force Remediation
-          </h3>
+          <a href="{{ SITEURL }}/products/forces/" class="c-fluidbk no-underline">
+            <h3 class="c-fluid-bk roboto fw7 f4 mv0 tr-l tc lh-18">
+              The Robot Element that Breaks the Build to Force Remediation
+            </h3>
+          </a>
           <p class="c-fluid-bk roboto fw1 f-key-features lh-2 tr-l tl">
             <strong class="b">Forces</strong> allows you to implement
             DevSecOps into your project.
@@ -242,10 +250,12 @@
         </div>
       </div>
     </div>
-    <h2 class="f1 fw6 c-fluid-bk roboto mt4 mb6 tc lh-solid">
-      These four elements, which are part of our Continuous Hacking service,
-      allow your company to achieve high vulnerability remediation rates
-    </h2>
+    <a href="{{ SITEURL }}/services/continuous-hacking/" class="c-fluid-bk no-underline">
+      <h2 class="f1 fw6 c-fluid-bk roboto mt4 mb6 tc lh-solid">
+        These four elements, which are part of our Continuous Hacking service,
+        allow your company to achieve high vulnerability remediation rates
+      </h2>
+    </a>
   </div>
 </div>
 <div class="bg-solutions bg-banner-sz coverm cover-s section-height justify-center items-center flex flex-wrap minh-100vh">
