--- a/airs/theme/2020/templates/products/skims.html
+++ b/airs/theme/2020/templates/products/skims.html
@@ -254,6 +254,10 @@
       </button>
     </a>
   </div>
+  <p class="c-fluid-bk fw7 f2 tc">
+    Skims is part of our Continuous Hacking service,
+    which will enable you to achieve high vulnerability remediation rates
+  </p>
 </div>
 {% endblock content %}
 
