airs\refac(front): #3637 change styles in home
- Changed the styles for the Home page in smaller resolutions


Former-commit-id: 54d71cb046062e4443697ec6f3c28799a102792f

--- a/airs/theme/2020/static/scss/base.scss
+++ b/airs/theme/2020/static/scss/base.scss
@@ -314,7 +314,9 @@ $codeyellow: rgba(230, 219, 116, 1);
   .w-logo { width: 10rem; }
   .pv-4-m { padding-bottom: 1.6rem; padding-top: 1.6rem; }
   .w90-s { width: 90%; }
-  .fheader { font-size: 4.5rem; }
+  .fheader { font-size: 3.5rem; }
+  .f-sub { font-size: 1.6rem; }
+  .f-18 { font-size: 1.8rem; }
   .cover-s { background-size: cover; }
   .w-100-s { width: 100%; }
   .nt-menu { margin-top: -.125rem; }
