--- a/airs/theme/2020/templates/footer.html
+++ b/airs/theme/2020/templates/footer.html
@@ -1,7 +1,7 @@
 <div class="bg-white">
   <div class="mw-1366 ph-body center df-l flex-wrap db-ml pb5-l pb5-m pb4 pt4-ns pt2 footer-component">
     <!-- company logo -->
-    <div class="pt1 pt4-l w-100 center">
+    <div class="pt4 w-100 center">
       <div class="tc">
         <p class="c-fluid-bk roboto b f-footer mv0 ml3 db-l dn">
           <img
