--- a/airs/theme/2020/templates/landing.html
+++ b/airs/theme/2020/templates/landing.html
@@ -55,7 +55,7 @@
       <!-- Get a Demo button -->
       <div class="tl-l tc pt2-l pt5">
         <a class="no-underline" href="{{ SITEURL }}/contact-us/">
-          <span class="dib br2 bannerbt hv-bt-fluid-rd ph4-l ph5 pv2 bt-trans white b roboto pointer mt2">
+          <span class="dib br2 bannerbt f3 hv-bt-fluid-rd ph4-l ph5 pv2 bt-trans white b roboto pointer mt2">
               Get a Demo
           </span>
         </a>
@@ -105,7 +105,7 @@
 </div>
 <div class="mw-1366 mr-auto ml-auto ph-body">
   <div class="w-100">
-    <h2 class="f1 fw6 c-fluid-bk roboto mt6 mb4 lh-solid tc ">
+    <h2 class="f1-ns f-18 fw6 c-fluid-bk roboto mt6 mb4 lh-solid tc ">
       Four elements that help you build and maintain secure IT systems
     </h2>
     <div class="section-height center justify-center items-center flex flex-wrap">
@@ -116,7 +116,7 @@
           src="{{ SITEURL }}/{{ THEME_STATIC_DIR }}/images/products/product-integrates.png"
           alt="Young hacker smiling">
         </div>
-        <div class="w-45-l fl-l tl-l tc mw6">
+        <div class="w-45-l fl-l tl tc-m mw6">
           <h2 class="f1 fw6 c-fluid-bk roboto mv3">
             <i>
               <img
@@ -127,7 +127,7 @@
             integrates
           </h2>
           <a href="{{ SITEURL }}/products/integrates/" class="c-fluid-bk no-underline">
-            <h3 class="c-fluid-bk roboto fw7 f4 mv0 tl-l tc lh-18">
+            <h3 class="c-fluid-bk roboto fw7 f4 mv0 tl lh-copy">
               The Platform Element that Controls the Process to Achieve Remediation
             </h3>
           </a>
@@ -152,7 +152,7 @@
           src="{{ SITEURL }}/{{ THEME_STATIC_DIR }}/images/products/product-skims.png"
           alt="Young hacker smiling">
         </div>
-        <div class="w-45-l fr-l tr-l tc mw6">
+        <div class="w-45-l fr-l tr-l tc-m tl mw6">
           <h2 class="f1 fw6 c-fluid-bk roboto mv3">
             <i>
               <img
@@ -163,7 +163,7 @@
             skims
           </h2>
           <a href="{{ SITEURL }}/products/skims/" class="c-fluid-bk no-underline">
-            <h3 class="c-fluid-bk roboto fw7 f4 mv0 tr-l tc lh-18">
+            <h3 class="c-fluid-bk roboto fw7 f4 mv0 tr-l tl lh-copy">
               The Automatic Element that Identifies Superficial Vulnerabilities
             </h3>
           </a>
@@ -187,7 +187,7 @@
           src="{{ SITEURL }}/{{ THEME_STATIC_DIR }}/images/products/product-drills.png"
           alt="Young hacker smiling">
         </div>
-        <div class="w-45-l fl-l tl-l tc mw6">
+        <div class="w-45-l fl-l tl tc-m mw6">
           <h2 class="f1 fw6 c-fluid-bk roboto mv3">
             <i>
               <img
@@ -198,7 +198,7 @@
             drills
           </h2>
           <a href="{{ SITEURL }}/products/drills/" class="c-fluid-bk no-underline">
-            <h3 class="c-fluid-bk roboto fw7 f4 mv0 tl-l tc lh-18">
+            <h3 class="c-fluid-bk roboto fw7 f4 mv0 tl lh-copy">
               The Human Element that Continuously Detects Vulnerabilities
             </h3>
           </a>
@@ -223,7 +223,7 @@
           src="{{ SITEURL }}/{{ THEME_STATIC_DIR }}/images/products/product-forces.png"
           alt="Young hacker smiling">
         </div>
-        <div class="w-45-l fr-l tr-l tc mw6">
+        <div class="w-45-l fr-l tr-l tc-m tl mw6">
           <h2 class="f1 fw6 c-fluid-bk roboto mv3">
             <i>
               <img
@@ -234,7 +234,7 @@
             forces
           </h2>
           <a href="{{ SITEURL }}/products/forces/" class="c-fluidbk no-underline">
-            <h3 class="c-fluid-bk roboto fw7 f4 mv0 tr-l tc lh-18">
+            <h3 class="c-fluid-bk roboto fw7 f4 mv0 tr-l tl lh-copy">
               The Robot Element that Breaks the Build to Force Remediation
             </h3>
           </a>
@@ -261,7 +261,7 @@
 <div class="bg-solutions bg-banner-sz coverm cover-s section-height justify-center items-center flex flex-wrap minh-100vh">
   <div class="mw-1366 ph-body center pv0-l pv4">
     <div class="w-100 mw8 center">
-      <h2 class="white tc roboto f1 fw7 mv3">
+      <h2 class="white tc roboto f1 fw7 mv3 lh-title">
         Continuous Hacking: Multiple Solutions, One Service
       </h2>
     </div>
@@ -304,8 +304,8 @@
   </div>
 </div>
 <div class="bg-compliance bg-banner-sz coverm cover-s section-height justify-center items-center flex flex-wrap minh-100vh">
-  <div>
-    <h2 class="white center roboto w-100 tc f1 lh3 pl3-l ph3 mw7">
+  <div class="tc">
+    <h2 class="white center roboto w-100 tc f1 lh3 pl3-l ph3 mw7 lh-title">
       We can help you comply with the following standards, among others<br>
     </h2>
     <a href="{{ SITEURL }}/products/rules/" class="no-underline">
@@ -338,10 +338,10 @@
 <!-- Ebook section -->
 <div class="bg-ebook bg-banner-sz cover bg-center section-height justify-center items-center flex flex-wrap minh-100vh">
   <div>
-    <h2 class="white center roboto w-100 tc f1 lh3 pl3-l ph3 mw7">
+    <h2 class="white center roboto w-100 tc f1 lh3 pl3-l ph3 mw7 lh-title">
       Are you going fast in the wrong direction?<br>
     </h2>
-    <h3 class="white center roboto w-100 tc f2-ns f3 pl3-l ph3 mw7">
+    <h3 class="white center roboto w-100 tc f2-ns f4 pl3-l ph3 mw7">
       Hacking with speed and precision
     </h3>
     <div class="tc">
@@ -355,12 +355,12 @@
 <div class="section-height justify-center items-center flex flex-wrap minh-100vh">
   <div class="overflow-hidden">
     <div class="tc mw7 center">
-      <h2 class="c-fluid-bk roboto tc f1 lh3 mv4">
+      <h2 class="c-fluid-bk roboto tc f1 lh-title mv4">
         Worldwide Hacking Experts
       </h2>
     </div>
     <div class="tc mw7 center pb4">
-      <p class="roboto c-fluid-bk fw1 f-key-features lh-2 mv4 ph5-l">
+      <p class="roboto c-fluid-bk fw1 f-key-features lh-2 mv4 ph5-l ph-body">
         Since 2001, <b class="fw7">Fluid Attacks</b> has been developing
         cybersecurity products and providing solutions for clients in
         industries like technology, banking, finance, healthcare, insurance,
@@ -374,7 +374,7 @@
   </div>
 </div>
 <div class="asap-bg bg-banner-sz cover bg-center section-height justify-center items-center flex flex-wrap">
-  <h2 class="white f1 tc roboto b mv0">
+  <h2 class="white f1 tc roboto b mv0 lh-title">
     We find all vulnerabilities and report them ASAP
   </h2>
 
