integrates\fix(cross): #3594.8 instrument newrelic
Former-commit-id: b70259961f2457e771e789f66657bd3942dfcff0

--- a/integrates/app/templates/app.html
+++ b/integrates/app/templates/app.html
@@ -10,6 +10,31 @@
     </script>
     {% if not debug %}
     <script id="Cookiebot" src="https://consent.cookiebot.com/uc.js" data-cbid="9c4480b4-b8ae-44d8-9c6f-6300b86e9094" data-blockingmode="auto" type="text/javascript"></script>
+    <script>
+      NREUM = {
+        init: {
+          distributed_tracing: {enabled: true},
+          privacy: {cookies_enabled: true}
+        }
+      };
+    </script>
+    <script src="https://js-agent.nr-assets.net/nr-loader-spa-1184.min.js"></script>
+    <script>
+      NREUM.loader_config = {
+        accountID:"2188654",
+        agentID:"130553383",
+        applicationID:"130553351",
+        licenseKey:"fb4437a0cc",
+        trustKey:"2188654"
+      };
+      NREUM.info = {
+        applicationID:"130553351",
+        beacon:"bam.nr-data.net",
+        errorBeacon:"bam.nr-data.net",
+        licenseKey:"fb4437a0cc",
+        sa:1
+      };
+    </script>
     {% endif %}
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
