--- a/airs/theme/2020/templates/footer.html
+++ b/airs/theme/2020/templates/footer.html
@@ -191,7 +191,7 @@
           </p>
         </div>
         <div class="contact-form w-100">
-          <div>
+          <div id="crmWebToEntityForm" class="zcwf_lblLeft crmWebToEntityForm">
             <script src="https://www.google.com/recaptcha/api.js" async defer></script>
             <form action="https://crm.zoho.com/crm/WebForm" name=WebForm4687720000000504044 method="POST" onSubmit="javascript:document.charset='UTF-8'; return checkMandatory4687720000000504044(); return validateForm()" accept-charset="UTF-8">
               <input type="text" style="display:none;" name="xnQsjsdp" value="1a8b1be45eb673e71a5b1925197e4664b5207c89778ad1e7315be647827aaa2d" />
@@ -246,6 +246,9 @@
               <script type="text/javascript"
                       src="{{ SITEURL }}/{{ ASSET_URL }}">
               </script>
+              {% endassets %}
+              {% assets output="static/js/form.min.js", "js/tmp/form.min.js" %}
+              <script src="{{ SITEURL }}/{{ ASSET_URL }}"></script>
               {% endassets %}
               <div class="pv3 center">
                 <select id="COBJ1CF5"
